feat(get): validate-billet done
